src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Subtype22__c</fullName>
        <label>Subtype22</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cellphone</fullName>
                </value>
                <value>
                    <fullName>Laptop/Desktop</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Wrong order</fullName>
                </value>
                <value>
                    <fullName>Wrong/Missing Item</fullName>
                </value>
                <value>
                    <fullName>Mens</fullName>
                </value>
                <value>
                    <fullName>Womens</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Licensee</fullName>
                </value>
                <value>
                    <fullName>Hardware Issue</fullName>
                </value>
                <value>
                    <fullName>Material Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TYPE2__c</fullName>
        <label>TYPE2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carhartt.com Issues</fullName>
                </value>
                <value>
                    <fullName>Carhartt.com Order Return</fullName>
                </value>
                <value>
                    <fullName>Corporate and International Inquiries</fullName>
                </value>
                <value>
                    <fullName>Corporate Sales, Discounts, and Parternships</fullName>
                </value>
                <value>
                    <fullName>FR Notification</fullName>
                </value>
                <value>
                    <fullName>Gift Cards</fullName>
                </value>
                <value>
                    <fullName>Hardware/Fabric Request</fullName>
                </value>
                <value>
                    <fullName>Licensee Issue</fullName>
                </value>
                <value>
                    <fullName>Loyalty Program</fullName>
                </value>
                <value>
                    <fullName>Mailings/Email List</fullName>
                </value>
                <value>
                    <fullName>NSS/Personalization</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Product Questions</fullName>
                </value>
                <value>
                    <fullName>RA/Courtesy Exchange</fullName>
                </value>
                <value>
                    <fullName>Carhartt Stores and Retailers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>Total_Order__c  -  Total_Merchandise__c  -  Freight_Amount__c  -  Freight_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchandise Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Issued__c</fullName>
        <label>Total Credit Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Merchandise__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Merchandise</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Order</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Refund__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Refund</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Refund__c</fullName>
        <label>Total Tax Refund</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_product_Tax_discount__c</fullName>
        <label>Total product &amp; Tax discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_product_cost__c</fullName>
        <label>Total product cost</label>
        <summarizedField>Order_Item__c.Product_Cost__c</summarizedField>
        <summaryForeignKey>Order_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Upsell_Cross_sell_Order_Number__c</fullName>
        <label>Upsell/Cross-sell Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell_Cross_sell_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you placed an order for item(s) that were not intended to be purchased prior to contact with the customer.</inlineHelpText>
        <label>Upsell/Cross-sell Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Order__c</fullName>
        <label>Web Order #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_of_Each_Carton__c</fullName>
        <label>Weight of Each Carton</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>discountFromOrderitem__c</fullName>
        <label>discountFromOrderitem</label>
        <summarizedField>Order_Item__c.Discount_if_applicable_Dollar__c</summarizedField>
        <summaryForeignKey>Order_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Commitments</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Commitment_Case</value>
        </filters>
        <label>All Commitments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Consumer_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Consumer_Case</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <label>All Open Consumer Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Retail_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Retail_Case</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <label>All Open Retail Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Support_Services_Cases</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>RNeedham</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>BEtzold</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>JCumming</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>AHarris</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>SPerez</value>
        </filters>
        <label>All Support Services Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brand_Management_Cases</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.REASON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Brand_Management</value>
        </filters>
        <label>Brand Management Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Canada Queue</value>
        </filters>
        <label>Canada Queue</label>
        <language>en_US</language>
        <queue>Canada_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Canada_Commitment_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Canada Commitment Queue</label>
        <language>en_US</language>
        <queue>Canada_Commitment_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Consumer_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Consumer Queue</value>
        </filters>
        <label>Consumer Queue</label>
        <language>en_US</language>
        <queue>Consumer_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Consumer_Commitment_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Consumer Commitment Queue</label>
        <language>en_US</language>
        <queue>Consumer_Commitment_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Grainger_RFQ_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Grainger Queue</value>
        </filters>
        <label>Grainger Queue</label>
        <language>en_US</language>
        <queue>Grainger_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Industrial_Commitment_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Industrial Commitment Queue</label>
        <language>en_US</language>
        <queue>Industrial_Commitment_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Industrial_Sales_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Industrial Sales Queue</value>
        </filters>
        <label>Industrial Sales Queue</label>
        <language>en_US</language>
        <queue>Industrial_Sales_Queue</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Brand_Management</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <description>This is for brand management team</description>
        <label>Brand Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commitment_Case</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <label>Commitment Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consumer_Case</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <label>Consumer Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ecommerce_Credit_Referrals</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <label>Ecommerce Credit Referrals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Case</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <label>Retail Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Case_Rejection_Rule</fullName>
        <active>true</active>
        <description>This rule is used for when user selects status as rejeceted then they have to select rejection reason.</description>
        <errorConditionFormula>AND($RecordType.Name = &quot;Brand Management&quot;, ISPICKVAL(Status,&quot;Review Reject&quot;),ISBLANK(Case_Reject_Reason__c))</errorConditionFormula>
        <errorDisplayField>Case_Reject_Reason__c</errorDisplayField>
        <errorMessage>Please give the reason why you are rejecting this case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consumer_Case_Must_Have_Consumer_Account</fullName>
        <active>true</active>
        <description>Prevents consumer cases from being created for retail accounts.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Consumer Case&quot;,
OR (
Account.RecordType.Name = &quot;End User Account&quot;,
Account.RecordType.Name = &quot;Industrial Distributor&quot;,
Account.RecordType.Name = &quot;Retailer Account&quot;))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Consumer cases can only be created for Consumer accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consumer_Case_Must_Have_Consumer_Contact</fullName>
        <active>true</active>
        <description>Prevents consumer cases from being created for retail contacts.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Consumer Case&quot;,
Contact.RecordType.Name &lt;&gt; &quot;Consumer Contact&quot;, 
Contact.Id &lt;&gt; &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>Consumer cases can only be created for Consumer contacts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Validaiton</fullName>
        <active>true</active>
        <errorConditionFormula>OR( AND ( Discount_if_applicable_Dollar__c != 0,Discount_if_applicable__c != 0), AND ( discountFromOrderitem__c != 0,Discount_if_applicable_Dollar__c 
 != 0)  )</errorConditionFormula>
        <errorMessage>Enter Discount($) or  Discount(%). You can not enter both at a time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Internal_Contact_Validation</fullName>
        <active>true</active>
        <description>whenever internal contact is assign change the status to In-progress</description>
        <errorConditionFormula>AND (ISPICKVAL(Status, &apos;In Progress&apos;),OR(NOT((ISBLANK( Internal_Contact1__c ))),NOT((ISBLANK( Internal_Contact2__c ))),NOT((ISBLANK( Internal_Contact3__c ))),NOT((ISBLANK( Internal_Contact4__c ))),NOT((ISBLANK( Internal_Contact5__c )))))</errorConditionFormula>
        <errorMessage>Please Change status to In-Progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Number</fullName>
        <active>true</active>
        <description>Requires an Order Number, when Orders is selected as the case type.</description>
        <errorConditionFormula>AND (
$RecordType.Name = &quot;Consumer Case&quot;,
ISPICKVAL(Type, &quot;Orders&quot;),
Order_Number_s__c = &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Order_Number_s__c</errorDisplayField>
        <errorMessage>You must enter an Order Number when Orders is the case type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Numbers</fullName>
        <active>true</active>
        <description>Requires an Order Number, when Orders is selected as the case type.</description>
        <errorConditionFormula>AND (
$RecordType.Name = &quot;Retail Case&quot;,
ISPICKVAL(Type, &quot;Orders&quot;),
Order_Number_s__c = &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Order_Number_s__c</errorDisplayField>
        <errorMessage>You must enter an Order Number when Orders is the case type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retail_Case_Must_Have_Retail_Account</fullName>
        <active>true</active>
        <description>Prevents retail cases from being created for consumer accounts.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Retail Case&quot;,
Account.RecordType.Name = &quot;Consumer Account&quot;)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Retail cases can only be created for Retail accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retail_Case_Must_Have_Retail_Contact</fullName>
        <active>true</active>
        <description>Prevents retail cases from being created for consumer contacts.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Retail Case&quot;,
Contact.RecordType.Name = &quot;Consumer Contact&quot;)</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>Retail cases can only be created for Retail contacts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Return_Authorization_Number</fullName>
        <active>true</active>
        <description>Require RA# when, RA is selected as case type.</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Type, &quot;Return Authorization&quot;),
Return_Authorization_Number__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Return_Authorization_Number__c</errorDisplayField>
        <errorMessage>You must enter an RA# when Return Authorization is the case type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Selected</fullName>
        <active>true</active>
        <description>User dont have permission to select below picklist values.
 Review Reject ,Escalated</description>
        <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
TEXT(Status) = &apos;Review Reject&apos;,
TEXT(Status) = &apos;Escalated&apos;
),
NOT($User.Id=&quot;0050h000003nIqR&quot;)
)</errorConditionFormula>
        <errorMessage>You do&apos;t have permission to selected  Review Reject and Escalated status.Please contact Adminstrator.</errorMessage>
    </validationRules>
</CustomObject>